// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="PasswordField-root custom"
>
  <div
    className="PasswordField-wrapper"
  >
    <input
      className="PasswordField-colorRegular PasswordField-input"
      data-testid="password-field"
      defaultValue="Hello World"
      placeholder=""
      type="password"
    />
    <div
      className="PasswordField-icon"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex={0}
      title="Hide password"
    >
      <i
        aria-hidden="true"
        className="Icon-root Icon-sm"
      >
        visibility
      </i>
    </div>
  </div>
</div>
`;

exports[`renders correctly 2`] = `
<div
  className="PasswordField-root custom"
>
  <div
    className="PasswordField-wrapper"
  >
    <input
      className="PasswordField-colorRegular PasswordField-input"
      data-testid="password-field"
      defaultValue="Hello World"
      placeholder=""
      type="text"
    />
    <div
      className="PasswordField-icon"
      onClick={[Function]}
      onKeyUp={[Function]}
      role="button"
      tabIndex={0}
      title="Show password"
    >
      <i
        aria-hidden="true"
        className="Icon-root Icon-sm"
      >
        visibility_off
      </i>
    </div>
  </div>
</div>
`;
